<resources>
    <string name="app_name">startandroid</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="radioBtn_1">1</string>
    <string name="radioBtn_2">2</string>
    <string name="radioBtn_3">3</string>
    <string name="save_note">Save note</string>
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>